Totally changed to dashboard view. Single most recent entry displayed only.