@@ -2,33 +2,23 @@ package WeatherStation;
 
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
-import javafx.fxml.FXML;
-import javafx.scene.control.TableView;
 import kong.unirest.HttpResponse;
 import kong.unirest.JsonNode;
 import kong.unirest.Unirest;
 import kong.unirest.json.JSONArray;
+import kong.unirest.json.JSONException;
 import kong.unirest.json.JSONObject;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.sql.Time;
-import java.text.ParseException;
+import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
-import java.util.*;
 
 
 public class Controller {
-    @FXML
-    static private TableView<TimeWeather> timeWeathers;
 
-    public static ObservableList<TimeWeather> getRecentTemps() throws ParseException {
-        String encodedMSG = "";
-        try {
-            encodedMSG = URLEncoder.encode(",speed|mph", "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            e.printStackTrace();
-        }
+    public static ObservableList<TimeWeather> getRecentTemps() {
+        String encodedMSG;
+        encodedMSG = URLEncoder.encode(",speed|mph,temp|C", StandardCharsets.UTF_8);
         String host = "https://api.synopticdata.com/v2/stations/timeseries";
         String query = "?STID=KCDC&recent=65&obtimezone=local&units=english" + encodedMSG + "&token=be4d2c633f72452d8c612a35f6f75b1b";
         HttpResponse<JsonNode> httpResponse = Unirest.get(host + "" + query)
@@ -46,18 +36,28 @@ public class Controller {
         JSONArray altimeterSettings = (JSONArray) observations.get("altimeter_set_1");
         JSONArray windDirection = (JSONArray) observations.get("wind_cardinal_direction_set_1d");
         JSONArray windSpeed = (JSONArray) observations.get("wind_speed_set_1");
-        JSONArray windChill = (JSONArray) observations.get("wind_chill_set_1d");
+        JSONArray windChill = new JSONArray();
+        try{windChill = (JSONArray) observations.get("wind_chill_set_1d");}catch(Exception e){
+            windChill=new JSONArray();
+            for(Object date : dateTimes){
+                windChill.put(-100);
+            }
+        }
         JSONArray dewPoint = (JSONArray) observations.get("dew_point_temperature_set_1");
         JSONArray milesVisibility = (JSONArray) observations.get("visibility_set_1");
         JSONArray relHumidity = (JSONArray) observations.get("relative_humidity_set_1");
         JSONArray pressure = (JSONArray) observations.get("relative_humidity_set_1");
-        JSONArray seaLevelPressure = (JSONArray) observations.get("sea_level_pressure_set_1");
+        JSONArray seaLevelPressure = new JSONArray();
+        try{ seaLevelPressure = (JSONArray) observations.get("sea_level_pressure_set_1");}
+        catch(kong.unirest.json.JSONException jsonException){
+            try{ seaLevelPressure = (JSONArray) observations.get("sea_level_pressure_set_1d");}catch(JSONException ohWell){}
+        }
         ObservableList<TimeWeather> timeWeathers = FXCollections.observableArrayList();
         SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss");
 
         System.out.println("wind speed units: " + jsonArray.getJSONObject(0).getJSONObject("UNITS").get("wind_speed"));
 
-        for (int i = 0; i < dateTimes.length(); i++) {
+        int i=dateTimes.length()-1;
             try {
 
                 TimeWeather aTimeWeather = new TimeWeather();
@@ -113,10 +113,8 @@ public class Controller {
                 }
                 timeWeathers.add(aTimeWeather);
             } catch (Exception e) {}
-            for (TimeWeather timeWeather : timeWeathers) {
-                System.out.println("Time: " + timeWeather.getDate() + " Temp: " + timeWeather.getTemp());
-            }
 
-        }return timeWeathers;
+
+        return timeWeathers;
     }
 }
